Add Merchant Model and Routes
