# server/app.js
@@ -15,6 +15,7 @@ app.use(
 const userRoutes = require("./routes/userRoutes");
 const menuRoutes = require("./routes/menuRoutes");
 const productRoutes = require("./routes/productRoutes");
+const merchantRoutes = require("./routes/merchantRoutes");
 
 // 設置 JSON 解析和 URL 編碼解析
 app.use(express.json());
@@ -30,5 +31,6 @@ app.use("/api-docs", cors(), swaggerUi.serve, swaggerUi.setup(swaggerFile));
 app.use("/api", userRoutes);
 app.use("/api", menuRoutes);
 app.use("/api", productRoutes);
+app.use("/api/merchants", merchantRoutes);
 
 module.exports = app;
