# server/models/MenuModels.js
@@ -15,15 +15,15 @@ module.exports = (sequelize, DataTypes) => {
         type: DataTypes.TEXT, // 描述欄位
         allowNull: true, // 可以為空
       },
-      //   merchant_id: {
-      //     type: DataTypes.UUID, // 關聯商家的 UUID
-      //     allowNull: false, // 不允許為空
-      //     references: {
-      //       model: "Merchants", // 關聯到 Merchants 表
-      //       key: "id", // 外鍵指向 Merchant 表的 id 欄位
-      //     },
-      //     onDelete: "CASCADE", // 商家刪除時，相關菜單也會刪除
-      //   },
+      merchant_id: {
+        type: DataTypes.UUID, // 關聯商家的 UUID
+        allowNull: false, // 不允許為空
+        references: {
+          model: "merchants", // 關聯到 Merchants 表
+          key: "id", // 外鍵指向 Merchant 表的 id 欄位
+        },
+        onDelete: "CASCADE", // 商家刪除時，相關菜單也會刪除
+      },
     },
     {
       // 可以選擇設置一些配置選項
@@ -33,12 +33,12 @@ module.exports = (sequelize, DataTypes) => {
   );
 
   // 設置關聯
-  // Menu.associate = (models) => {
-  //   Menu.belongsTo(models.Merchant, {
-  //     foreignKey: 'merchant_id',
-  //     as: 'merchant',
-  //   });
-  // };
+  Menu.associate = (models) => {
+    Menu.belongsTo(models.Merchant, {
+      foreignKey: "merchant_id",
+      as: "merchant",
+    });
+  };
 
   // 設定關聯：這段程式碼是用來定義 Menu 和 Product 之間的關聯
   Menu.associate = (models) => {
@@ -49,6 +49,7 @@ module.exports = (sequelize, DataTypes) => {
       // `as` 用來定義這個關聯的別名，這個別名會用於查詢時來加載相關聯的資料
       // 在這裡我們設置為 "products"，之後在 include 查詢時會使用這個別名來獲取所有對應的產品
       as: "products", // 這個 "products" 是用來在查詢中載入所有對應的 Product 資料
+      onDelete: "CASCADE", // 刪除 Menu 時，刪除關聯的 Product
     });
   };
 
